--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "^1.3.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "classnames": "^2.2.6",
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
     "react": "^16.4.0",
