--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.0.0-beta.54",
     "babel-preset-es2015": "^6.24.1",
+    "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "react": "^16.4.1"
   }
